--- a/Algorithm2.ipynb
+++ b/Algorithm2.ipynb
@@ -6,7 +6,7 @@
       "name": "Algorithm2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM1RpbaKhaFeITNNTgpAgHg",
+      "authorship_tag": "ABX9TyNho44oUqkBruN7I15D1aY2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,6 +43,17 @@
         "# 데이터를 오름차순 또는 내림차순으로 나열하는 알고리즘\n",
         "# 검색엔진 엑셀,워드.... 많이 사용하고 있다"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "O7bdmABaBZi5"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -271,6 +282,240 @@
       "metadata": {
         "id": "FbhpYJ6U4Q1k"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 단순 삽입법\n",
+        "\n",
+        "# 산입하려는 데이터를 변수를 따로 하나 준비하여 대입한다.\n",
+        "# 변수의 데이터를 이미 정렫뢴 데이터와 순서대로 비교한다.\n",
+        "# 변수의 데이터보다 작은 데이터가 발견되면 그 뒤의 요소에 변수의 데이터를 삽입한다.\n",
+        "\n",
+        "# 올바른 순서가 되도록 하나씩 데이터를 삽입한다.\n",
+        "# 단순 삽입법은 삽입 정렬, 기본 삽입법, 삽입법이라고 한다.\n",
+        "\n",
+        "#     0    1    2    3    4\n",
+        "#     5    3    4    1    2\n",
+        "\n",
+        "# 일단 index 0을 정렬된 공이라고 가정한다.\n",
+        "#     5    3    4    1    2\n",
+        "#    --   정렬된 공으로 가정\n",
+        "\n",
+        "# 정렬이 안된 공들 중 첫번째 즉 3을 정렬된 공들 중 올바른 순서가 되도록 삽입한다.\n",
+        "\n",
+        "#     3    5    4    1    2\n",
+        "# 0번째 칸의 아페는 없기 때문에 5를 하나뒤로 이동하고 3인공을 0번째 칸에 넣는다.\n",
+        "# 이제 3과 5는 정렬된 상태가 되었다.\n",
+        "\n",
+        "# 다시 정렬이 안된 공들중 첫번째 즉 4를 정렬된 공들중 올바른 순서가 되도록 삽입한다.\n",
+        "\n",
+        "# 이 시점에서 '정렬된 공'은 0번칸의 3과 1번칸의 5사이가 되므로 3의 뒤, 5의 앞이다.\n",
+        "# 4를 5의 앞에 삽입한다.\n",
+        "\n",
+        "#     3    4    5    1    2\n",
+        "\n",
+        "# 다시 정렬이 안된 공들 중 첫번째 즉 1를 정렬된 공들 중 올바른 순서가 되도록 삽입한다.\n",
+        "\n",
+        "# 정렬된 공은 0번 칸의 3, 1번칸의 4, 2번칸의 5이다 여기서 올바른 위치는 3의 앞이므로 1을 3의 앞에 삽입한다.\n",
+        "\n",
+        "#     1    3    4    5    2.\n",
+        "----------------------\n",
+        "\n",
+        "# 마지막으로 2를 정렬된 공들 중 올바른 순서가 되도록 삽입한다.\n",
+        "\n",
+        "#     1    2    3    4    5\n",
+        "\n",
+        "# 퀵 정렬 quick sort\n",
+        "\n",
+        "# 데이터를 대소 그룹의 둘로 나우어 분해하여 전체를 정렬하는 방식의 알고리즘\n",
+        "# 실행 속도가 빠른것이 특징이다.\n",
+        "\n",
+        "# 대량의 데이터를 정렬할 때 자주 사용 되며 유명한 알고리즘 중에서도 실제로 사용되는\n",
+        "# 빈도가 높은 가장 중요한 알고리즘의 하나이다.\n",
+        "\n",
+        "#    5    4    7    6    8    3    1    2    9\n",
+        "#   --\n",
+        "# 우선 정렬의 기준이 되는 공을 선택하다. 첫번째 기준은 5번 공이다.\n",
+        "\n",
+        "# 기분 공 5보다 작은 공은 5의 앞으로 이동시키고\n",
+        "# 기준 공 5보다 큰 공은 5의 뒤로 이동 시킨다.\n",
+        "\n",
+        "#    4    3    1    2    5    7    6    8    9\n",
+        "#                       --  5는 정렬이 된 상태\n",
+        "\n",
+        "#    1    2    3    4    5    6    7    8    9\n",
+        "#             --        --        --          3과 7이 정렬된 상태가 되었다.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "rHVVOfYMBcMa"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 에라토스테네스의 채\n",
+        "\n",
+        "# 소수를 찾아내는 알고르지므\n",
+        "# 소수는 2 이상의 정수 중 1과 그 수 자신으로만 나눌수 있는 수\n",
+        "# 소수는 나열되어 있는 구간이 불규칙하므로 임의로 찾기 어렵다.\n",
+        "\n",
+        "# 2 3 4 5 7 11 13 17 \n",
+        "\n",
+        "# 소수인지 아닌지를 구분하는 것은 의외로 아주 어렵다.\n",
+        "# 예를 들면 3의 배수는 3,6,9,12,15...처럼 3간격으로 나열되면 비교적 간단하다.\n",
+        "# 하지만 소수는 규칙성이 없기 때문에 간격이 불규칙하고 랜덤하다. 즉 소수를 한번에 열거하기는 어렵다.\n",
+        "\n",
+        "# 하나하나 그 수보다 작은 숫자로 나누어보고 나눌 수 있으면 소수가 아닌 것으로 판단할 수 있다.\n",
+        "# 이 방법은 비효울적이고 수의 범위가 커지면 어마어마하게 많은 시간이 소요 된다.\n",
+        "\n",
+        "# 고대 그리스의 에라토스테네스는 위와 같은 방법을 개선하여 소수를 효율적으로 발견하는 방법을 고안했다.\n",
+        "\n",
+        "# 에라토스테네스의 체는 '그 수의 제곱근보다 작은 소수의 배수를 없애면 남은 수가 소수다'\n",
+        "#라는 생각을 바탕으로 그 소수를 찾는 방법을 말한다.\n",
+        "\n",
+        "# 예를 들면 100이하의 소수를 모두 찾고 싶으면 가장 먼저 100 의 제곱근 이하의 소수를 선택한다.\n",
+        "# 100의 제곱근은 10 이므로 10이하에서의 모든 소수는 2,3,5,7  총 4개이다.\n",
+        "\n",
+        "# 먼저 2부터 100까지 중 2는 남기고 2의 배수를 모두 삭제한다.\n"
+      ],
+      "metadata": {
+        "id": "un2UkQ29HcML"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 나누어 지는 수는 모두 소수가 아니므로 즉, 제곱근 이하의 어느 소수로도 나누어\n",
+        "# 떨어지지 않고 끝까지 체에 남아 있는 수가 소수이다.  \n",
+        "\n",
+        "# 에라토스 테네스의 체 알고리즘\n",
+        "# 1. 어떤 수 이하의 모든 정수 데이터를 준비\n",
+        "# 2. 어떤 수의 제곱근 보다 작은 소수의 배수를 제거한다. \n",
+        "# 3. 마지막까지 남은 수를 출력한다. "
+      ],
+      "metadata": {
+        "id": "eLqUfnCEpAj3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# # 유클리드 알고리즘\n",
+        "\n",
+        "# # 최대 공약수를 구하는 알고리즘\n",
+        "# # 최대 공약수는 공통의 약수 중에서 가장 큰수를 말한다. \n",
+        "# # 반복 구조를 이용하여 해결한다는 점에서 프로그래머가 알고 있어야 할 대표적인 알고리즘이다. \n",
+        "\n",
+        "# 약수  \n",
+        "# 3의 약수  1, 3\n",
+        "# 4의 약수 1,2,4\n",
+        "# 5의 약수 1,5\n",
+        "# 6의 약수 1,2,3,6       \n",
+        "# 8의 약수 1,2,4,8\n",
+        "# 12의 약수 1,2,3,4,6\n",
+        "\n",
+        "# 공약수 : 공통된 약수\n",
+        "# 4,6 의 공약수  1,2\n",
+        "# 8,12의 공약수 1.2.4\n",
+        "# 6, 12의 공약수 1,2,3,6\n",
+        "# 최대공약수 : 공통된 약수들 중 제일 큰 숫자.\n",
+        "# 4,6의 최대공약수는 2\n",
+        "# 8,12의 최대공약수는 4\n",
+        "# 6,12의 최대공약수는 6\n"
+      ],
+      "metadata": {
+        "id": "UGZhR8UBpCXO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 유클리드 알고리즘이란? 두수의 나눗셈을 반복하여 최대 공약수를 구한다. \n",
+        "\n",
+        "# 12 와 6의 최대 공약수\n",
+        "\n",
+        "# 12   %   6    =   0  # 나머지가 없이 딱 나누어 떨어지는데 사용된 수가 최대 공약수\n",
+        "\n",
+        "\n",
+        "# 221 % 143 = 78\n",
+        "#          143 % 78 = 65\n",
+        "#                   78 % 65 = 13\n",
+        "#                           65 % 13 = 0    # 0이 나올때의 나누어준 수 13 이 바로 최대 공약수"
+      ],
+      "metadata": {
+        "id": "LZl1QbEzpGm_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 나머지를 구하는 나눗셈의 산수 연산자 %를 사용한다. \n",
+        "# 딱 나누어 떨어지지 않을 때에 나눗셈을 반복하는 처리를 반복 구조로 표현한다. \n",
+        "# 반복 구조에는 선판정형과 후판정형이 있다.  \n",
+        "# 선 판정형 구조는 반복 처리에 들어 가기 전에 조건식으로 판정을 실시한다. \n",
+        "# 후 판정형 구조는 반복 처리 후에 조건식으로 판정을 실시한다.  do ~ while 자바"
+      ],
+      "metadata": {
+        "id": "uX2TSvLYpIgm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 빅오 표기법\n",
+        "\n",
+        "# 알고리즘이 얼마 빠른지를 표시하는 특별한 방법\n",
+        "\n",
+        "# 탐색\n",
+        "#                   단순 탐색                       이진 탐색\n",
+        "# 100개            100밀리초                       7밀리 초\n",
+        "# 10000개          10초                            14밀리 초\n",
+        "# 1000000000개   11일                            32밀리 초\n",
+        "\n",
+        "# 원소의 개수가 증가해도 이진탐색 시간은 얼마 늘어나지 않는다. \n",
+        "# 하지만 단순탐색의 시간은 어마어마하게 증가 된다. \n",
+        "# 원소의 갯수가 커질수록 이진캄색은 훨씬 빨라지게 된다. \n",
+        "\n",
+        "# 빅오 표기법은 알고리즘이 얼마나 빠른지만 말해준다. \n",
+        "\n",
+        "# 단순 탐색은 원소를 하나하나 확인하기 때문에 n번 연산을 해야한다. \n",
+        "# 빅오 표기법으로는 O(n) 이다. 빅오 표기법은 속도를 시간단위로 세지 않는다. \n",
+        "# 빅오 표기법은 연산 횟수를 비교하기 위한 개념이다. \n",
+        "# 단순 탐색의 실행시간은 O(n) 로 나타낸다. \n",
+        "\n",
+        "# O(log n) 이진 탐색\n",
+        "\n",
+        "# O(n) 선형 시간 , 단순 탐색\n",
+        "\n",
+        "# O(n * log n) \n",
+        "\n",
+        "# O(n^2) 선택 정렬, 느린 정렬 알고리즘\n",
+        "\n",
+        "# O(n!) 외판원 문제, 정말 느린 알고리즘\n",
+        "\n",
+        "# 알고리즘의 속도는 시간으로 측정하지 않는다. \n",
+        "# 알고리즘의 시간은 어떻게 증가하는가로 측정한다. \n",
+        "# 알고리즘의 시간은 빅오표기법으로 나타낸다. "
+      ],
+      "metadata": {
+        "id": "jDLKAO52pKZo"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
